--- a/index.html
+++ b/index.html
@@ -184,7 +184,19 @@
             <div class="copyright">
                 <p>Copyright 2020 Shelby Company Limited</p>
             </div>
-            <script src="index.js" />
+            <script>
+                window.addEventListener('scroll',function(){
+    var head=document.querySelector('header');
+   head.classList.toggle('sticky',window.scrollY > 0);
+});
+
+function toggleMenu(){
+   var menuToggle=document.querySelector(".toggle");
+   var menu=document.querySelector(".menu");
+   menuToggle.classList.toggle('active');
+   menu.classList.toggle('active');
+}
+            </script>
          
             
         </body>
